--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>첫번째 홈페이지 , rarion</h1>
+    <h1>자바 웹 프로그래머</h1>
+    <h2>프로젝트</h2>
+    <h3>회원제 게시판</h3>
+
+    <div>
+        <a href="http://3.34.255.99/prj1">시연하기</a>
+    </div>
+    <div>
+        <a href="https://github.com/rarion/prj20221115-1">코드보기</a>
+    </div>
+
+    <ul class="li">HTML, CSS, JavaScript</ul>
+    <ul class="li">Java</ul>
+    <ul class="li">MariaDB</ul>
+    <ul class="li">Spring Framework</ul>
+    <ul class="li">Mybatis</ul>
 </body>
 </html>
