--- a/index.html
+++ b/index.html
@@ -5,23 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
-    <h1>자바 웹 프로그래머</h1>
-    <h2>프로젝트</h2>
-    <h3>회원제 게시판</h3>
 
-    <div>
-        <a href="http://3.34.255.99/prj1">시연하기</a>
-    </div>
-    <div>
-        <a href="https://github.com/rarion/prj20221115-1">코드보기</a>
+    <div class="container">
+        <div class="row">
+            <div class="col py-5 bg-light">
+                <h1 class="display-4">자바 웹 프로그래머</h1>
+
+                <a class="btn btn-primary" href="github.com/rarion">GITHUB</a>
+
+            </div>
+        </div>
     </div>
 
-    <ul class="li">HTML, CSS, JavaScript</ul>
-    <ul class="li">Java</ul>
-    <ul class="li">MariaDB</ul>
-    <ul class="li">Spring Framework</ul>
-    <ul class="li">Mybatis</ul>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="card-group">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">회원제 게시판</h5>
+                            <p class="card">
+                                <ui>
+                                    <li>HTML, CSS, JavaScript</li>
+                                    <li>JSP, JSTL</li>
+                                    <li>Spring Web</li>
+                                    <li>Spring security</li>
+                                    <li>MariaDB</li>
+                                    <li>Mybatis</li>
+                                    <li>AWS EC2, S3</li>
+                                </ui>
+
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="http://3.34.255.99/prj1">시연하기</a>
+                            <a href="https://github.com/rarion/prj20221115-1">코드보기</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">두번째 프로젝트</h5>
+                            <p class="card"></p>
+                        </div>
+                        <div class="card-footer"></div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">세번째 프로젝트</h5>
+                            <p class="card"></p>
+                        </div>
+                        <div class="card-footer"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
